[ct] dark mode fixes
* Apply dark mode to the whole page.
* Apply dark mode to the left nav icons.

Bug: skia:10920

--- a/ct/modules/style.scss
+++ b/ct/modules/style.scss
@@ -127,12 +127,3 @@ div.dialog-content {
 .darkmode table.options {
     background-color: var(--surface-2dp);
 }
-
-/* Make sure the app doesn't leave empty space on the bottom/right. e.g. blank
- white in darkmode.
- */
-html,
-body,
-app-sk {
-    background-color: var(--background);
-}
